Tidy styles. Put back truncated label fix.

--- a/styles/atom-haxe.less
+++ b/styles/atom-haxe.less
@@ -4,44 +4,6 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.atom-haxe {
-
-}
-
-.haxe-completion-log {
-    max-height:100%;
-    height:100%;
-}
-
-.haxe-completion-log-query-content, .haxe-completion-log-server-content {
-    border:solid 1px #666;
-    padding:1em;
-    height:50%;
-    max-height:50%;
-    min-height:50%;
-    width:32em;
-    max-width:40em;
-    overflow:auto;
-    white-space:pre-wrap;
-}
-
-    //use \n as newline in messages.
-    //note this isn't really scoped to our
-    //plugin yet :todo:
-.plain-message {
-    white-space:pre-wrap;
-}
-
-
-// Fixing up autocomplete-plus for us
-atom-overlay {
-    // see https://github.com/atom-community/autocomplete-plus/issues/255
-    // https://github.com/atom-community/autocomplete-plus/issues/255#issuecomment-74010347
-    autocomplete-suggestion-list.select-list.popover-list ol.list-group li {
-        color: inherit;
-    }
-}
-
 // Hint
 atom-text-editor[data-grammar="source haxe"], atom-text-editor[data-grammar="source hx"] {
 
@@ -63,7 +25,6 @@ atom-text-editor[data-grammar="source haxe"], atom-text-editor[data-grammar="sou
         > .haxe-hint-selected {
             display: inline-block;
             padding: @haxe-hint-spacing @haxe-hint-spacing;
-            //margin: 0 -@haxe-hint-spacing;
             color: @haxe-hint-inline-fg;
             background-color: fade(@haxe-hint-inline-fg, 10%);
 
@@ -75,8 +36,6 @@ atom-text-editor[data-grammar="source haxe"], atom-text-editor[data-grammar="sou
         > .haxe-hint-not-selected {
             display: inline-block;
             padding: @haxe-hint-spacing @haxe-hint-spacing;
-            //padding: @haxe-hint-spacing @haxe-hint-spacing;
-            //margin: 0 -@haxe-hint-spacing;
         }
 
         .haxe-hint-name {
@@ -106,9 +65,9 @@ status-bar.status-bar #status-bar-haxe {
 // Fixing up truncated right label
 atom-text-editor[data-grammar="source haxe"], atom-text-editor[data-grammar="source hx"] {
     atom-overlay.autocomplete-plus autocomplete-suggestion-list.autocomplete-suggestion-list .right-label {
-        //
+        max-width: none;
     }
     atom-overlay.autocomplete-plus autocomplete-suggestion-list.autocomplete-suggestion-list .left-label {
-        //
+        max-width: none;
     }
 }
